--- a/package.json
+++ b/package.json
@@ -10,9 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@clerk/clerk-react": "^5.24.1",
+    "@clerk/clerk-react": "^5.15.1",
+    "axios": "^1.7.7",
+    "imagekit": "^6.0.0",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-quill-new": "^3.3.3",
+    "react-router-dom": "^6.28.0",
+    "react-toastify": "^10.0.6",
+    "timeago.js": "^4.0.2",
+    "imagekitio-react": "^4.2.0",
+    "@tanstack/react-query": "^5.59.20"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
